<resources>
    <string name="app_name">Movies</string>
    <string name="title_activity_drawer">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login_register">Login / Register</string>
    <string name="default_email">user@gmail.com</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="series_in_progress">Series in progress</string>
    <string name="home">Home</string>
    <string name="cinema">Cinema</string>
    <string name="series">Series</string>
    <string name="persons">Persons</string>
    <string name="comments_ratings">Comments / Ratings</string>
    <string name="bookmark">Bookmark</string>
    <string name="settings">settings</string>
    <string name="contact_us">Contact us</string>
    <string name="share">Share</string>
    <string name="application">Application</string>
    <string name="movieDetails">Movie details</string>
    <string name="trending_series">Trending TV Shows</string>
    <string name="tvShows">TV Shows</string>
    <string name="rating">Rating</string>
    <string name="serieDetails">Show details</string>
    <string name="summary">Summary</string>
    <string name="projection_room">Projection room</string>
    <string name="see_in_google_maps">See in google maps</string>
    <string name="see_more">See more</string>
    <string name="see_reviews">See reviews</string>
    <string name="add_review">Add review</string>
    <string name="actors">Actors</string>
    <string name="directors">Directors</string>
    <string name="comments_and_ratings">Comments and Ratings</string>
    <string name="see_all_comments">See all comments/Add Review</string>
    <string name="related_movies">Related movies</string>
    <string name="releaseDate">Release date</string>
    <string name="movies">Movies</string>
    <string name="projection_rooms">Projection rooms</string>
    <string name="myMovies">My movies</string>
    <string name="mySeries">My series</string>
    <string name="myCinemas">My cinemas</string>

    <string name="seasons">Seasons</string>
    <string name="relaties_tv_shows">Relaties TV Shows</string>
    <string name="actors_and_directors">Actors and Directors</string>
    <string name="series_airing">Series Airing</string>
    <string name="movies_in_projection">Movies in projection</string>
    <string name="movie_credits">Movie credits</string>
    <string name="series_credits">Series credits</string>
    <string name="birthday">Birthday</string>
</resources>
