<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/zzz_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_cinema"
            android:icon="@drawable/zzz_video"
            android:title="@string/cinema" />
        <item
            android:id="@+id/nav_series"
            android:icon="@drawable/zzz_television"
            android:title="@string/series" />
        <item
            android:id="@+id/nav_persons"
            android:icon="@drawable/zzz_people"
            android:title="@string/persons" />
        <item
            android:id="@+id/nav_comments"
            android:icon="@drawable/zzz_comment"
            android:title="@string/comments_ratings" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/zzz_tag"
            android:title="@string/bookmark" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/zzz_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/zzz_email"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/zzz_share_variant"
                android:title="@string/share" />
        </menu>
    </item>

</menu>
